# AttendU

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  TESTING_SETUP.md  TODO.md  conftest.py  factories.py  package-lock.json  pyproject.toml  pytest.ini  replit.md  report.json  requirements-test.txt
.claude/: CLAUDE.md
.cursor/agents/: backend-agent.md  code-review-agent.md  frontend-agent.md  integration-agent.md  ui-ux-agent.md
.github/: description.md
.github/agents/: senior-frontend-mentor.agent.md
.github/skills/modern-frontend-ui-builder/: SKILL.md
.local/state/scribe/: scribe.db
docker/: .env  .env.example  README.md  docker-compose.yml
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: httpClient.ts
frontend/src/components/: DashboardPlaceholder.tsx  LoginPage.css  LoginPage.tsx  RegisterPage.css  RegisterPage.tsx
frontend/src/context/: ThemeContext.tsx  TopbarContext.tsx
frontend/src/hooks/: useAttendanceSocket.ts  useCourses.ts  useSnackbar.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: AllStudentsPage.css  AllStudentsPage.tsx  CourseDashboardPage.css  CourseDashboardPage.tsx  CourseDetailsPlaceholder.tsx  DashboardPage.css  DashboardPage.tsx  HistoryPage.css  HistoryPage.tsx  SessionPage.css  SessionPage.tsx  SettingsPage.css  SettingsPage.tsx  StudentsPage.css  StudentsPage.tsx
frontend/src/routes/: ProtectedRoute.tsx
frontend/src/store/: authStore.ts
frontend/src/styles/: app-ui.css  design-system.css
frontend/src/utils/: exportToCSV.ts
src/: .env.example  .gitignore  check_db.py  main.py  requirements.txt
src/Models/: AttendanceSessionModel.py  AuditLogModel.py  CourseModel.py  Device_attendance_events.py  SectionsModel.py  StudentsModel.py  UserModel.py  __init__.py  base_data_model.py  enrollmentsModel.py
src/Models/schemas/: __init__.py  attendance_event.py  attendance_report.py  attendance_session.py  audit_log.py  course.py  device.py  section.py  student.py  user.py
src/alembic/: env.py
src/alembic/versions/: 00e4da358ca5_add_section_id_to_devices.py  2363852feb51_add_section_id_to_devices.py  961321d4f572_initial_schema.py  a0afd42f093d_add_attendance_session_and_audit_log.py  (+3 more)
src/controllers/: auth_controller.py  base_controller.py
src/helpers/: __init__.py  auth.py  config.py  database.py  dependencies.py  exporters.py  face_paths.py  thread_pool.py  ws_manager.py
src/media/: .gitignore
src/routes/: attendance_checkin.py  attendance_sessions.py  auth.py  base.py  courses.py  devices.py  reports.py  sections.py  students.py  users.py  ws.py
src/services/: face_recognition_service.py
tests/: test_attendance_integration.py  test_auth_integration.py  test_courses_integration.py  test_students_integration.py
(+81 files in other folders)
