[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.2",
    "asyncpg==0.31.0",
    "email-validator==2.2.0",
    "fastapi==0.128.0",
    "openpyxl==3.1.5",
    "passlib[argon2,bcrypt]==1.7.4",
    "psycopg2-binary==2.9.11",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "reportlab==4.2.5",
    "sqlalchemy==2.0.45",
    "uvicorn[standard]==0.40.0",
]
